# vte-sys-rs

./: Cargo.toml  Gir.toml  build.rs
conf/: gir-vte.toml
src/: lib.rs
tests/: abi.rs  constant.c  layout.c  manual.h
