[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
build = "build.rs"
description = "FFI bindings for vte3"
license = "MIT"
links = "vte"
name = "vte-sys"
version = "0.2.1"

[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
atk-sys = { git="https://github.com/gtk-rs/sys" }
bitflags = "1"
gdk-sys = { git="https://github.com/gtk-rs/sys" }
gio-sys = { git="https://github.com/gtk-rs/sys" }
glib-sys = { git="https://github.com/gtk-rs/sys" }
gobject-sys = { git="https://github.com/gtk-rs/sys" }
gtk-sys = { git="https://github.com/gtk-rs/sys" }
libc = ""
pango-sys = { git="https://github.com/gtk-rs/sys" }

[features]
v0_40 = []
v0_42 = ["v0_40"]
v0_44 = ["v0_42"]
v0_46 = ["v0_44"]
v0_48 = ["v0_46"]
v0_50 = ["v0_48"]
v0_52 = ["v0_50"]
v0_54 = ["v0_52"]
v0_56 = ["v0_54"]
dox = []

[lib]
name = "vte_sys"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"
