[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
build = "build.rs"
description = "FFI bindings for vte3"
license = "MIT"
links = "vte"
name = "vte-sys"
version = "0.2.1"
[package.metadata.docs.rs]
features = ["dox"]

[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
bitflags = "1"
libc = "0.2"

[dependencies.atk-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gdk-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gtk-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.pango-sys]
git = "https://github.com/gtk-rs/sys"

[features]
v0_40 = []
v0_42 = ["v0_40"]
v0_44 = ["v0_42"]
v0_46 = ["v0_44"]
v0_48 = ["v0_46"]
v0_50 = ["v0_48"]
v0_52 = ["v0_50"]
v0_54 = ["v0_52"]
v0_56 = ["v0_54"]
dox = []

[lib]
name = "vte_sys"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"
