[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
build = "build.rs"
description = "FFI bindings for vte3"
license = "MIT"
links = "vte"
name = "vte-sys"
version = "0.2.2"
[package.metadata.docs.rs]
features = ["dox"]

[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
bitflags = "1"
libc = "0.2"

[dependencies.atk-sys]
version = "0.9.1"

[dependencies.gdk-sys]
version = "0.9.1"

[dependencies.gio-sys]
version = "0.9.1"

[dependencies.glib-sys]
version = "0.9.1"

[dependencies.gobject-sys]
version = "0.9.1"

[dependencies.gtk-sys]
version = "0.9.2"

[dependencies.pango-sys]
version = "0.9.1"

[features]
v0_40 = []
v0_42 = ["v0_40"]
v0_44 = ["v0_42"]
v0_46 = ["v0_44"]
v0_48 = ["v0_46"]
v0_50 = ["v0_48"]
v0_52 = ["v0_50"]
v0_54 = ["v0_52"]
v0_56 = ["v0_54"]
dox = []
v0_58 = ["v0_56"]

[lib]
name = "vte_sys"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"
